--- a/marketing.html
+++ b/marketing.html
@@ -67,7 +67,7 @@
             <nav class="android-navigation mdl-navigation">
               <!-- <a class="mdl-navigation__link mdl-typography--text-uppercase" href="mission.html">Mission</a> -->
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="about.html">About Us</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="Marketing.html">Technology</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="technology.html">Technology</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="marketing.html">Marketing</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="publicpolicy.html">Public Policy</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="finance.html">Finance</a>
@@ -95,7 +95,7 @@
         </span>
         <nav class="mdl-navigation">
            <a class="mdl-navigation__link" href="about.html">About Us</a>
-          <a class="mdl-navigation__link" href="Marketing.html">Marketing</a>
+          <a class="mdl-navigation__link" href="technology.html">Technology</a>
           <a class="mdl-navigation__link" href="marketing.html">Marketing</a>
           <a class="mdl-navigation__link" href="publicpolicy.html">Public Policy</a>
           <a class="mdl-navigation__link" href="finance.html">Finance</a>
