--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
         <div class="mdl-layout__header-row">
           <span class="android-title mdl-layout-title">
             <a href="index.html">
-            <img class="android-logo-image" src="images/android-logo.png"></a>
-            <!-- <img class="android-logo-image" src="images/Google-logo.png"> -->
+            <img class="android-logo-image" src="images/logo.png"></a>
+            <!-- <img class="android-logo-image" src="images/logo.png"> -->
           </span>
           <!-- Add spacer, to align navigation to the right in desktop -->
           <div class="android-header-spacer mdl-layout-spacer"></div>
-          <div class="android-search-box mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right mdl-textfield--full-width">
-            <label class="mdl-button mdl-js-button mdl-button--icon" for="search-field">
+        <!-- <!--   <div class="android-search-box mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right mdl-textfield--full-width"> -->
+            <!-- <label class="mdl-button mdl-js-button mdl-button--icon" for="search-field">
               <i class="material-icons">search</i>
             </label>
             <div class="mdl-textfield__expandable-holder">
               <input class="mdl-textfield__input" type="text" id="search-field">
-            </div>
-          </div>
+            </div> -->
+          <!-- </div> --> -->
           <!-- Navigation -->
           <div class="android-navigation-container">
             <nav class="android-navigation mdl-navigation">
@@ -74,11 +74,18 @@
             </nav>
           </div>
           <span class="android-mobile-title mdl-layout-title">
-            <img class="android-logo-image" src="images/android-logo.png">
+            <a href="index.html">
+            <img class="android-logo-image" src="images/logo.png"></a>
           </span>
           <button class="android-more-button mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" id="more-button">
             <i class="material-icons">more_vert</i>
           </button>
+           <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
+            <li class="mdl-menu__item"><a href="https://www.google.com" style="text-decoration:none;color:black;">Feedback</a></li>
+          <!--   <li class="mdl-menu__item">4.4 KitKat</li>
+            <li disabled class="mdl-menu__item">4.3 Jelly Bean</li>
+            <li class="mdl-menu__item">Android History</li> -->
+          </ul>
         <!--   <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
             <li class="mdl-menu__item">5.0 Lollipop</li>
             <li class="mdl-menu__item">4.4 KitKat</li>
@@ -89,9 +96,9 @@
       </div>
 
       <div class="android-drawer mdl-layout__drawer">
-        <span class="mdl-layout-title">
-          <img class="android-logo-image" src="images/android-logo-white.png">
-        </span>
+      <!--   <span class="mdl-layout-title">
+          <img class="android-logo-image" src="images/logo.png">
+        </span> -->
         <nav class="mdl-navigation">
            <a class="mdl-navigation__link" href="about.html">About Us</a>
           <a class="mdl-navigation__link" href="technology.html">Technology</a>
@@ -126,10 +133,41 @@
 
       <div class="android-content mdl-layout__content">
         <a name="top"></a>
-        <div class="android-be-together-section mdl-typography--text-center">
+
+         <div class="android-be-together-section-bg mdl-typography--text-center">
+            <div class="logo-font android-slogan">Google Chapter Project</div>
+            <div class="logo-font android-sub-slogan">Hello! We are Lynbrook FBLA’s Chapter Project team. This year (2017-2018), we are partnering with Google. </div>
+           <!--  <div class="logo-font android-create-character">
+              <a href=""><img src="images/andy.png"> create your android character</a>
+            </div> -->
+
+           <!--  <a href="#screens">
+              <button class="android-fab mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">
+                <i class="material-icons">expand_more</i>
+              </button>
+            </a> -->
+        </div>
+
+                   <div class="android-customized-section-image-index"></div>
+
+       <!--    <div class="logo-font android-slogan">be together. not the same.</div>
+          <div class="logo-font android-sub-slogan">welcome to android... be yourself. do your thing. see what's going on.</div> -->
+         <!--  <div class="logo-font android-create-character">
+            <a href=""><img src="images/andy.png"> create your android character</a>
+          </div> -->
+
+         <!--  <a href="#screens">
+            <button class="android-fab mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">
+              <i class="material-icons">expand_more</i>
+            </button>
+          </a> -->
+        <!-- </div> -->
+
+
+       <!--  <div class="android-be-together-section mdl-typography--text-center">
           <div class="logo-font android-slogan">Google Chapter Project</div>
           <div class="logo-font android-sub-slogan">Hello! We are Lynbrook FBLA’s Chapter Project team. This year (2017-2018), we are partnering with Google. 
-</div>
+</div> -->
           <!-- <div class="logo-font android-create-character"> -->
             <!-- <a href=""><img src="images/andy.png"> create your android character</a> -->
            <!--  Our mission is to educate and raise awareness throughout the community of the effect and utility of technology, while creating an establishment of educational opportunities through focused analysis of business concepts associated with the technological industry.
@@ -140,7 +178,9 @@
               <i class="material-icons">expand_more</i>
             </button>
           </a> -->
-        </div>
+        <!-- </div> -->
+       <!--  <div class="android-be-together-section-bg">
+        </div> -->
        <!--  <div class="android-screen-section mdl-typography--text-center">
           <a name="screens"></a>
           <div class="mdl-typography--display-1-color-contrast">Powering screens of all sizes</div>
@@ -207,7 +247,7 @@
           <div class="android-customized-section-image"></div>
         </div> -->
         <div class="android-more-section">
-          <div class="android-section-title mdl-typography--display-1-color-contrast">Our Subcomittees</div>
+          <div class="android-section-title mdl-typography--display-1-color-contrast">Subcomittees</div>
           <div class="android-card-container mdl-grid">
             <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
               <div class="mdl-card__media">
@@ -301,7 +341,7 @@
           </div>
 
           <div class="mdl-mega-footer--middle-section">
-            <p class="mdl-typography--font-light">Copyright © 2018 Lynbrook High School,Future Business Leaders of America (FBLA)</p>
+            <p class="mdl-typography--font-light">Copyright © 2018 Lynbrook High School, Future Business Leaders of America (FBLA)</p>
             <!-- <p class="mdl-typography--font-light">Some features and devices may not be available in all areas</p> -->
           </div>
 
@@ -327,7 +367,7 @@
               <li class="mdl-menu__item">Android for Work</li>
             </ul>
             <a class="android-link mdl-typography--font-light" href="">Blog</a> -->
-            <a class="android-link mdl-typography--font-light" href="">Privacy Policy</a>
+            <a class="android-link mdl-typography--font-light" href="mailto:projectchairs@lynbrookfbla.com">Privacy Policy</a>
           </div>
 
         </footer>
