--- a/technology.html
+++ b/technology.html
@@ -47,20 +47,20 @@
       <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
         <div class="mdl-layout__header-row">
           <span class="android-title mdl-layout-title">
-            <!-- <img class="android-logo-image" src="images/android-logo.png"> --><a href="index.html">
-            <img class="android-logo-image" src="images/android-logo.png"></a>
+            <!-- <img class="android-logo-image" src="images/logo.png"> --><a href="index.html">
+            <img class="android-logo-image" src="images/logo.png"></a>
             <!-- <img class="android-logo-image" src="images/Google-logo.png"> -->
           </span>
           <!-- Add spacer, to align navigation to the right in desktop -->
           <div class="android-header-spacer mdl-layout-spacer"></div>
-          <div class="android-search-box mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right mdl-textfield--full-width">
+        <!--   <div class="android-search-box mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right mdl-textfield--full-width">
             <label class="mdl-button mdl-js-button mdl-button--icon" for="search-field">
               <i class="material-icons">search</i>
             </label>
             <div class="mdl-textfield__expandable-holder">
               <input class="mdl-textfield__input" type="text" id="search-field">
             </div>
-          </div>
+          </div> -->
           <!-- Navigation -->
           <div class="android-navigation-container">
             <nav class="android-navigation mdl-navigation">
@@ -74,11 +74,18 @@
             </nav>
           </div>
           <span class="android-mobile-title mdl-layout-title">
-            <img class="android-logo-image" src="images/android-logo.png">
+            <a href="index.html">
+            <img class="android-logo-image" src="images/logo.png"></a>
           </span>
           <button class="android-more-button mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" id="more-button">
             <i class="material-icons">more_vert</i>
           </button>
+           <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
+            <li class="mdl-menu__item"><a href="https://www.google.com" style="text-decoration:none;color:black;">Feedback</a></li>
+          <!--   <li class="mdl-menu__item">4.4 KitKat</li>
+            <li disabled class="mdl-menu__item">4.3 Jelly Bean</li>
+            <li class="mdl-menu__item">Android History</li> -->
+          </ul>
         <!--   <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
             <li class="mdl-menu__item">5.0 Lollipop</li>
             <li class="mdl-menu__item">4.4 KitKat</li>
@@ -89,9 +96,9 @@
       </div>
 
       <div class="android-drawer mdl-layout__drawer">
-        <span class="mdl-layout-title">
+       <!--  <span class="mdl-layout-title">
           <img class="android-logo-image" src="images/android-logo-white.png">
-        </span>
+        </span> -->
         <nav class="mdl-navigation">
            <a class="mdl-navigation__link" href="about.html">About Us</a>
           <a class="mdl-navigation__link" href="technology.html">Technology</a>
@@ -209,7 +216,7 @@ Second, to shed light on Google’s continuous efforts to encourage technologica
           <div class="android-section-title mdl-typography--display-1-color-contrast">Activities</div>
           <div class="android-card-container mdl-grid">
             <!-- <p>ok</p> -->
-            <div class="mdl-cell mdl-cell--3-col mdl-cell--3-col-tablet mdl-cell--3-col-phone mdl-card mdl-shadow--3dp">
+            <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
               <div class="mdl-card__media">
                 <img src="images/more-from-1.png">
               </div>
@@ -227,7 +234,7 @@ Second, to shed light on Google’s continuous efforts to encourage technologica
               </div> -->
             </div>
 
-            <div class="mdl-cell mdl-cell--3-col mdl-cell--3-col-tablet mdl-cell--3-col-phone mdl-card mdl-shadow--3dp">
+            <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
               <div class="mdl-card__media">
                 <img src="images/more-from-4.png">
               </div>
@@ -245,7 +252,7 @@ Second, to shed light on Google’s continuous efforts to encourage technologica
               </div> -->
             </div>
 
-            <div class="mdl-cell mdl-cell--3-col mdl-cell--3-col-tablet mdl-cell--3-col-phone mdl-card mdl-shadow--3dp">
+            <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
               <div class="mdl-card__media">
                 <img src="images/more-from-2.png">
               </div>
@@ -301,7 +308,7 @@ Second, to shed light on Google’s continuous efforts to encourage technologica
           </div>
 
           <div class="mdl-mega-footer--middle-section">
-            <p class="mdl-typography--font-light">Copyright © 2018 Lynbrook High School,Future Business Leaders of America (FBLA)</p>
+            <p class="mdl-typography--font-light">Copyright © 2018 Lynbrook High School, Future Business Leaders of America (FBLA)</p>
             <!-- <p class="mdl-typography--font-light">Some features and devices may not be available in all areas</p> -->
           </div>
 
@@ -327,7 +334,7 @@ Second, to shed light on Google’s continuous efforts to encourage technologica
               <li class="mdl-menu__item">Android for Work</li>
             </ul>
             <a class="android-link mdl-typography--font-light" href="">Blog</a> -->
-            <a class="android-link mdl-typography--font-light" href="">Privacy Policy</a>
+            <a class="android-link mdl-typography--font-light" href="mailto:projectchairs@lynbrookfbla.com">Contact</a>
           </div>
 
         </footer>
