--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
   <li class="mdl-menu__item">Yet Another Action</li>
 </ul> -->
           <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
-            <li class="mdl-menu__item"><a href="https://www.google.com" style="text-decoration:none;color:black;">Feedback</a></li>
+            <li class="mdl-menu__item"><a href="mailto:bryanhpchiang@gmail.com" style="text-decoration:none;color:black;">Feedback</a></li>
           <!--   <li class="mdl-menu__item">4.4 KitKat</li>
             <li disabled class="mdl-menu__item">4.3 Jelly Bean</li>
             <li class="mdl-menu__item">Android History</li> -->
