--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <i class="material-icons">more_vert</i>
           </button>
            <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
-            <li class="mdl-menu__item"><a href="https://www.google.com" style="text-decoration:none;color:black;">Feedback</a></li>
+            <li class="mdl-menu__item"><a href="mailto:bryanhpchiang@gmail.com" style="text-decoration:none;color:black;">Feedback</a></li>
           <!--   <li class="mdl-menu__item">4.4 KitKat</li>
             <li disabled class="mdl-menu__item">4.3 Jelly Bean</li>
             <li class="mdl-menu__item">Android History</li> -->
@@ -260,7 +260,7 @@
                 <span class="mdl-typography--font-light mdl-typography--subhead">Four tips to make your switch to Android quick and easy</span>
               </div>
               <div class="mdl-card__actions">
-                 <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
+                 <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="technology.html">
                    Find out more
                    <i class="material-icons">chevron_right</i>
                  </a>
@@ -278,7 +278,7 @@
                 <span class="mdl-typography--font-light mdl-typography--subhead">Turn the little green Android mascot into you, your friends, anyone!</span>
               </div>
               <div class="mdl-card__actions">
-                 <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
+                 <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="marketing.html">
                    Find out more
                    <i class="material-icons">chevron_right</i>
                  </a>
@@ -296,7 +296,7 @@
                 <span class="mdl-typography--font-light mdl-typography--subhead">A clean, simple, customisable home screen that comes with the power of Google Now: Traffic alerts, weather and much more, just a swipe away.</span>
               </div>
               <div class="mdl-card__actions">
-                 <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
+                 <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="publicpolicy.html">
                    Find out more
                    <i class="material-icons">chevron_right</i>
                  </a>
@@ -314,7 +314,7 @@
                 <span class="mdl-typography--font-light mdl-typography--subhead">Hail a taxi, find a recipe, run through a temple – Google Play has all the apps and games that let you make your Android device uniquely yours.</span>
               </div>
               <div class="mdl-card__actions">
-                 <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
+                 <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="finance.html">
                    Find out more
                    <i class="material-icons">chevron_right</i>
                  </a>
